# WSPR-beacon

./: .gitignore  .gitmodules  ARTICLE-log.md  ARTICLE-raw.log.html  CHATGPT-BITES.txt  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README-restructure-suggestions.md  README.md  aliases.sh  build.sh  sdkconfig  to-do.md
components/dns-server/: CMakeLists.txt  dns-server.c
components/dns-server/include/: dns-server.h
components/jtencode/: CMakeLists.txt  JTEncode.cpp  RSEncoder.cpp  RSEncoder.h  host.cmake  to-convert.cpp
components/jtencode/include/: JTEncode.h
components/jtencode/test/: CMakeLists.txt  jtencode-test.cpp  test-wspr.cpp
components/jtencode/test-jtencode/: CMakeLists.txt  jtencode-test.cpp  main.cpp
components/jtencode/test-rsencode/: CMakeLists.txt  main.cpp
components/si5351/: CMakeLists.txt  Kconfig.projbuild  si5351.cpp
components/si5351/include/: si5351.h
components/tinyfsm/: CMakeLists.txt
doc/: FSM.mermaid
host-mock/: AppContext.cpp  CMakeLists.txt  EventGroup.cpp  EventGroup.h  FileSystem.cpp  GPIO.h  MockTimer.cpp  NVS.cpp  NVS.h  Net.cpp  Settings.h  Si5351.cpp  Task.cpp  Task.h  Time.cpp  Time.h  Timer.cpp  Timer.h  WebServer.cpp  main.cpp  run_tests.sh  test-server.cpp
host-mock/host-testbench/: test-server.cpp
include/: AppContext.h  Beacon.h  BeaconLogger.h  EventGroupIntf.h  FSM.h  FileSystemIntf.h  GPIOIntf.h  HttpHandlerIntf.h  HttpServerIntf.h  LoggerIntf.h  NVSIntf.h  NetIntf.h  RandomIntf.h  Scheduler.h  Settings.h  SettingsBase.h  SettingsIntf.h  Si5351Intf.h  SymbolOutputIntf.h  TaskIntf.h  TimeIntf.h  TimerIntf.h  WSPRModulatorIntf.h  WebServerIntf.h
main/: BeaconFSM.cpp  BeaconFSM.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Kconfig.projbuild  Scheduler.cpp  Scheduler.h  Settings.cpp  Settings.h  TimeManager.cpp  TimeManager.h  WebServer.cpp  WebServer.h  WifiManager.cpp  WifiManager.h  app-globals.h  main-vibe.cpp  main.cpp  secrets.h.example
main/host-testbench/: CMakeLists.txt  main.cpp  test-server.h
platform/esp32/: AppContext.cpp  ESP32HttpEndpointHandler.cpp  ESP32HttpWrappers.h  FileSystem.cpp  FileSystem.h  GPIO.h  Logger.cpp  NVS.cpp  Net.cpp  Net.h  Settings.cpp  Settings.h  Si5351.cpp  Si5351.h  Task.cpp  Task.h  Time.cpp  Time.h  Timer.cpp  Timer.h  WSPRModulator.cpp  WSPRModulator.h  WebServer.cpp  WebServer.h  main.cpp
platform/host-mock/: AppContext.cpp  FileSystem.cpp  FileSystem.h  GPIO.cpp  HostMockHttpEndpointHandler.cpp  HostMockHttpWrappers.h  Logger.cpp  Logger.h  MockTimer.cpp  MockTimer.h  NVS.h  Net.cpp  Net.h  Settings.cpp  Settings.h  Si5351.cpp  Si5351.h  Time.cpp  Time.h  Timer.cpp  Timer.h  WSPRModulator.cpp  WSPRModulator.h  WebServer.cpp  WebServer.h  main.cpp  mock-data.txt  test-ap-mode.txt  test-disconnected.txt  test-excellent-signal.txt  test-server-shared.cpp  test-server.cpp  test-server.h  test-sta-mode.txt  test-transmitting.txt
src/: Beacon.cpp  BeaconFSM.cpp  BeaconFSM.h  BeaconLogger.cpp  CMakeLists.txt  Settings.cpp  WebServer.cpp  WebServer.h
src/core/: Beacon.cpp  FSM.cpp  HttpEndpointHandler.cpp  Scheduler.cpp  SettingsBase.cpp
src/jtencode/example/: Si5351JTDemo.ino
target-esp32/: CMakeLists.txt  idf_component.yml  sdkconfig
target-esp32/components/dns-server/include/: dns-server.h
target-esp32/components/json/: CMakeLists.txt
target-esp32/components/si5351/: CMakeLists.txt  si5351.cpp
target-esp32/components/si5351/include/: si5351.h
target-esp32/main/: CMakeLists.txt  Kconfig.projbuild
tests/: CMakeLists-webui.txt  CMakeLists.txt  README.md  SchedulerTest.cpp  TestRunner.cpp  WebUI-Demo.md  WebUITest.cpp  fsm-test.cpp  integrated-test.cpp  simple-test.cpp  test-runner.cpp  webui-test.cpp
web/: calibration.html  calibration.js  common.js  header.js  home.js  index.html  layout.js  nav.js  netconfig.html  provisioning.html  schedule.html  script.js  security.html  settings.html  settings.js  style.css  wspr-test.html  wspr-test.js
